--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clsx": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "sass": "^1.66.1",
     "soundfont-player": "^0.12.0"
   },
